--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <button id="logoBtn">
       <img src="https://avatars.githubusercontent.com/u/142757185?s=200&v=4" alt="Logo" />
-      Subdomain Finder
+      🔎 Subdomain Finder
     </button>
     <a href="https://crt.sh/" target="_blank">API Source</a>
   </header>
