--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/givps/givps.github.io/refs/heads/main/assets/img/favicons/favicon.ico">
   <title>Subdomain Finder</title>
   <link rel="stylesheet" href="style.css" />
 </head>
